--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,21 @@
 html, body{
-    margin: 0;
-    padding: 2em 0 0 0;    
-	min-height: 100%;
+    margin: 0;    
+	height: 100vh;
 	
 	text-align: center;
 }
 
+
 header {
-	height: 15%;
+	height: 80px;
 
 	color: rgb(255, 255, 255);
 	background-color: rgb(97, 199, 199);		
 }
 
-body {
-	padding-bottom: 200px;
-}
-
 footer {	
 	clear: both;
-    height: 200px;    
+    height: 50px;
 
 	text-align: center;
 	
@@ -29,14 +25,28 @@ footer {
 
 a {
 	color: rgb(97, 199, 199);
+	margin: 0 15px 0 15px;
+}
+
+a:active {
+	background-color: rgb(47, 128, 128);
+}
+
+.section {
+	height: calc(100vh - 130px);
 }
 
 .input {
-	width: 10%;	
+	width: 10%;
+	margin: 0 15px 0 15px;
 }
 
 .input.date {
 	width: 20%;
+}
+
+.field.control.select.is-primary {
+	margin: 0 15px 0 15px;
 }
 
 .button.is-link {
