--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ footer {
 	background-color: rgb(97, 199, 199);
 }
 
+form {
+	margin: 2rem 0;
+}
+
 a {
 	color: rgb(97, 199, 199);
 	margin: 0 15px 0 15px;
@@ -34,11 +38,12 @@ a:active {
 
 .section {
 	height: calc(100vh - 130px);
+	padding: 3rem 0;
 }
 
 .input {
 	width: 10%;
-	margin: 0 15px 0 15px;
+	margin: 0 10px 0 10px;
 }
 
 .input.date {
@@ -47,6 +52,11 @@ a:active {
 
 .field.control.select.is-primary {
 	margin: 0 15px 0 15px;
+}
+
+.notification {
+	width: 60%;
+	margin: 2rem auto;
 }
 
 .button.is-link {
@@ -60,22 +70,41 @@ a:active {
 }
 
 .button.is-link.red {
-	position:absolute;
-	right: 0;
-	color: rgb(216, 247, 247);
+	color: rgb(236, 224, 203);
 	background-color: rgb(230, 82, 36);	
 }
 
 .button.is-link.red:hover {
-	color: rgb(203, 236, 236);
+	color: rgb(219, 207, 186);
 	background-color: rgb(214, 72, 28);	
 }
 
-.container {
+.button.is-link.back {
+	position: absolute;
+	left: 0;
+	color: rgb(216, 247, 247);
+	background-color: rgb(110, 130, 131);	
+}
+
+.button.is-link.back:hover {
+	color: rgb(203, 236, 236);
+	background-color: rgb(81, 96, 97);
+}
+
+.full-container {
 	text-align: center;
+	margin: 0;
 }
 
 .table {
 	margin: auto;
+}
+
+.available {
+	color: darkgreen;
+}
+
+.not-available {
+	color: crimson;
 }
 
